--- a/Album-2.html
+++ b/Album-2.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free website maker</a></section><section once="footers" class="cid-s7IVjFbpfr" id="footer6-1n">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section once="footers" class="cid-s7IVjFbpfr" id="footer6-1n">
 
     
 
