--- a/Album-4.html
+++ b/Album-4.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section once="footers" class="cid-s7IV65IwfY" id="footer6-17">
+<section class="engine"><a href="https://mobirise.info/k">how to develop your own website</a></section><section once="footers" class="cid-s7IV65IwfY" id="footer6-17">
 
     
 
