--- a/privacy.html
+++ b/privacy.html
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header1 cid-s7IiEW22u7" id="header16-g">
+<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="header1 cid-s7IiEW22u7" id="header16-g">
 
     
 
