create github pages

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="header1 cid-s7ydTSgyYK mbr-fullscreen" id="header16-1">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="header1 cid-s7ydTSgyYK mbr-fullscreen" id="header16-1">
 
     
 
@@ -140,7 +140,7 @@
                         <h4 class="card-title mbr-fonts-style display-5"><a href="Album-1.html" target="_blank" class="text-black"><strong>Time To Time Status...</strong></a></h4>
                         <p class="mbr-text mbr-fonts-style display-7">The Videos Used For Special Date Or Special Occasion.<br>Eg. 15 August, Ganpati Festivel, Etc.</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="A-1.html" class="btn btn-primary display-4" target="_blank">Open Album</a></div>
+                    <div class="mbr-section-btn text-center"><a href="Album-1.html" class="btn btn-primary display-4" target="_blank">Open Album</a></div>
                 </div>
             </div>
 
@@ -153,7 +153,7 @@
                         <h4 class="card-title mbr-fonts-style display-5"><a href="Album-2.html" target="_blank" class="text-black"><strong>Romantic&nbsp;Love Status...</strong></a><br></h4>
                         <p class="mbr-text mbr-fonts-style display-7">In This Album We Contain Love Status Love, Romantic, Couple Status, Sentimental Status.</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="Album-2.html" class="btn btn-primary display-4" target="_blank">
                             Open Album</a></div>
                 </div>
             </div>
@@ -167,7 +167,7 @@
                         <h4 class="card-title mbr-fonts-style display-5"><a href="Album-3.html" target="_blank" class="text-black"><strong>Sad Status...</strong></a></h4>
                         <p class="mbr-text mbr-fonts-style display-7"><br>In This Album We Include Broken Heart Status, Breackup Status And Much More.<br><br></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="Album-3.html" class="btn btn-primary display-4" target="_blank">
                             Open Album</a></div>
                 </div>
             </div>
@@ -181,7 +181,7 @@
                         <h4 class="card-title mbr-fonts-style display-5"><strong><a href="Album-4.html" target="_blank" class="text-black"><b>Attitude / Pubg Status...</b></a></strong></h4>
                         <p class="mbr-text mbr-fonts-style display-7">In This Album We Costumize Pubg Releted Status And Ego / Attitude Status.<br><br></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="Album-4.html" class="btn btn-primary display-4" target="_blank">
                             Open Album</a></div>
                 </div>
             </div>
@@ -334,7 +334,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gnJRmf+CwnxG3/I+xLOwjeKQ64cEB9MdrdFMpfNqW1mnGy47mqJQZyLRgePWCQFoCTwOm63xYK3ZGKSRxJHtcsnnInKzQ+fUKUQ+FU5cw9gMIdFUzH1lgMOvbnCHFYvj">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="k1ytbcS26+g0YFkhdRye4NiVt8vP8RuvaLyRCPIYiBiYARTcUQ+r88CBN0wDCFbZPMYp5kjdotPObCzior32KLw+6ahFxHiO9dRWNslW/YJlupWqYnGrmjbBX2kH7TLf">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
