--- a/terms.html
+++ b/terms.html
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section class="header1 cid-s7IekT7LDx" id="header16-e">
+<section class="engine"><a href="https://mobirise.info/e">make a website for free</a></section><section class="header1 cid-s7IekT7LDx" id="header16-e">
 
     
 
