--- a/Album-1.html
+++ b/Album-1.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section once="footers" class="cid-s7IAO7Rz4m" id="footer6-u">
+<section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><section once="footers" class="cid-s7IAO7Rz4m" id="footer6-u">
 
     
 
