--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="header1 cid-s7ydTSgyYK mbr-fullscreen" id="header16-1">
+<section class="engine"><a href="https://mobirise.info/m">website design templates</a></section><section class="header1 cid-s7ydTSgyYK mbr-fullscreen" id="header16-1">
 
     
 
@@ -225,11 +225,11 @@
 
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-img pb-3">
-                    <a href="https://www.youtube.com/channel/UC1p6t6yQHDRL2XOKXIXe84w?" target="_blank"><span class="mbr-iconfont socicon-youtube socicon"></span></a>
+                    <a href="https://www.youtube.com/channel/UC1p6t6yQHDRL2XOKXIXe84w?sub_confirmation=1" target="_blank"><span class="mbr-iconfont socicon-youtube socicon"></span></a>
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-5">
-                        <a href="https://www.youtube.com/channel/UC1p6t6yQHDRL2XOKXIXe84w" target="_blank" class="text-black"><strong>You Tube</strong></a></h4>
+                        <a href="https://www.youtube.com/channel/UC1p6t6yQHDRL2XOKXIXe84w?sub_confirmation=1" target="_blank" class="text-black"><strong>You Tube</strong></a></h4>
                     <p class="mbr-text mbr-fonts-style display-7">
                         All sites you make with Mobirise are mobile-friendly. You don't have to create a special mobile version of your site.
                     </p>
@@ -334,7 +334,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="k1ytbcS26+g0YFkhdRye4NiVt8vP8RuvaLyRCPIYiBiYARTcUQ+r88CBN0wDCFbZPMYp5kjdotPObCzior32KLw+6ahFxHiO9dRWNslW/YJlupWqYnGrmjbBX2kH7TLf">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="KUmiVFo8g+5BYsuxsrG1YGUF59ZrQ5wFRAdBRkN3vIUixaiI5SA+ZWA18OTmv8zdrZraDR/TWagPrkZBMiw1cHfHAI5OmbHnqIXoNmeeVlGIBhUj44nSd0BcPE/KVCjN">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
