create github pages

--- a/Album-2.html
+++ b/Album-2.html
@@ -32,6 +32,21 @@
   
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-175674703-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-175674703-1');
+</script>
+
+<!-- /Analytics -->
+
+
   <section class="menu cid-s7IVjENdvB" once="menu" id="menu2-1m">
 
     
@@ -69,7 +84,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy website creator</a></section><section once="footers" class="cid-s7IVjFbpfr" id="footer6-1n">
+<section class="engine"><a href="https://mobirise.info/g">how to build a website</a></section><section once="footers" class="cid-s7IVjFbpfr" id="footer6-1n">
 
     
 
