--- a/Album-3.html
+++ b/Album-3.html
@@ -32,6 +32,21 @@
   
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-175674703-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-175674703-1');
+</script>
+
+<!-- /Analytics -->
+
+
   <section class="menu cid-s7IViNMmep" once="menu" id="menu2-1e">
 
     
@@ -69,7 +84,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free website maker</a></section><section once="footers" class="cid-s7IViOgD4I" id="footer6-1f">
+<section class="engine"><a href="https://mobirise.info/m">website design templates</a></section><section once="footers" class="cid-s7IViOgD4I" id="footer6-1f">
 
     
 
