--- a/Album-4.html
+++ b/Album-4.html
@@ -32,6 +32,21 @@
   
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-175674703-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-175674703-1');
+</script>
+
+<!-- /Analytics -->
+
+
   <section class="menu cid-s7IV65bdM4" once="menu" id="menu2-16">
 
     
@@ -69,7 +84,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build a site for free</a></section><section once="footers" class="cid-s7IV65IwfY" id="footer6-17">
+<section class="engine"><a href="https://mobirise.info/f">simple website builder</a></section><section once="footers" class="cid-s7IV65IwfY" id="footer6-17">
 
     
 
