--- a/index.html
+++ b/index.html
@@ -32,6 +32,21 @@
   
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-175674703-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-175674703-1');
+</script>
+
+<!-- /Analytics -->
+
+
   <section class="menu cid-s7ydfEY7Ps" once="menu" id="menu2-0">
 
     
@@ -69,7 +84,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="header1 cid-s7ydTSgyYK mbr-fullscreen" id="header16-1">
+<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="header1 cid-s7ydTSgyYK mbr-fullscreen" id="header16-1">
 
     
 
@@ -334,7 +349,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="YSomY0o5Gmoiq/HHXGIW3dA5b4kmowBh0rqQjgIOzxccpriFxbuk5vF7TTlaKiqp2IsGalmC9Ci76OgWdG4iiB/Az9LSKb0YMmvRmaRsGUgH6LoaQbDjz9C17uaYA9jQ">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="fADrpnwgaVEAzJWDucm3egNH/aqp/CtpTcwro5uKaxhkQk/Ek0e+2XqkBnb8TkmiM6Hpw5vPG9gH2T5QDFMMZqpg3rjDrWMchNILMDfplVCKX2PJX+MiK3Elnc0vD0ZW">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
