--- a/policy.html
+++ b/policy.html
@@ -30,6 +30,21 @@
   
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-175674703-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-175674703-1');
+</script>
+
+<!-- /Analytics -->
+
+
   <section class="menu cid-s7ydfEY7Ps" once="menu" id="menu2-9">
 
     
@@ -67,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">create your own website for free</a></section><section class="header1 cid-s7IbyejzRN" id="header16-b">
+<section class="engine"><a href="https://mobirise.info/i">free website creation software</a></section><section class="header1 cid-s7IbyejzRN" id="header16-b">
 
     
 
