--- a/privacy.html
+++ b/privacy.html
@@ -30,6 +30,21 @@
   
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-175674703-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-175674703-1');
+</script>
+
+<!-- /Analytics -->
+
+
   <section class="menu cid-s7ydfEY7Ps" once="menu" id="menu2-f">
 
     
@@ -67,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy website maker</a></section><section class="header1 cid-s7IiEW22u7" id="header16-g">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header1 cid-s7IiEW22u7" id="header16-g">
 
     
 
