--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="header1 cid-s7ydTSgyYK mbr-fullscreen" id="header16-1">
+<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="header1 cid-s7ydTSgyYK mbr-fullscreen" id="header16-1">
 
     
 
@@ -227,11 +227,11 @@
 
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-img pb-3">
-                    <a href="https://www.instagram.com/paid__video" target="_blank"><span class="mbr-iconfont socicon-instagram socicon"></span></a>
+                    <a href="https://www.instagram.com/p_v_s_official" target="_blank"><span class="mbr-iconfont socicon-instagram socicon"></span></a>
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-5">
-                        <a href="https://www.instagram.com/paid__video" target="_blank" class="text-black"><strong>Instagram</strong></a></h4>
+                        <a href="https://www.instagram.com/p_v_s_official" target="_blank" class="text-black"><strong>Instagram</strong></a></h4>
                     <p class="mbr-text mbr-fonts-style display-7">
                         Mobirise is an easy website builder - just drop site elements to your page, add content and style it to look the way you like.
                     </p>
@@ -349,7 +349,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ukjZhfYQneIM+n57cFNS4xh2vfB3RsmsJkWRtrevPDo/++fKn4jhen5NNOHgNE3FUMNt77YH3g4yxRODiy2RO8jj+EeGtDbxG25fSxl2Qc8TX0RApXOXgmEOLCgj8eGq">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="cm66LOtqZLGdBfB+TbOGspwmnAYWSQLsmeKWSYby3tiU0auE0EmZph0TKjz+dHDwGstvLq11YWl1SNFeyVitDm369BlJ2AUdh6L6tYCidpbCyob9l2YStJwbuqK/mKt0">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
