--- a/Album-3.html
+++ b/Album-3.html
@@ -84,7 +84,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple website maker</a></section><section once="footers" class="cid-s7IViOgD4I" id="footer6-1f">
+<section class="engine"><a href="https://mobirise.info/f">easy site maker</a></section><section once="footers" class="cid-s7IViOgD4I" id="footer6-1f">
 
     
 
