create github pages

--- a/terms.html
+++ b/terms.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best html templates</a></section><section class="header1 cid-s7IekT7LDx" id="header16-e">
+<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section class="header1 cid-s7IekT7LDx" id="header16-e">
 
     
 
