create github pages

--- a/Album-1.html
+++ b/Album-1.html
@@ -8,13 +8,13 @@
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image:src" content="assets/images/Album-1-meta.png">
   <meta property="og:image" content="assets/images/Album-1-meta.png">
-  <meta name="twitter:title" content="1 Time To Time Status...">
+  <meta name="twitter:title" content="Time To Time Status - Paid Video Status | P V D">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/20200818-115620-128x128-1.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/20200818-184249-128x72-1.png" type="image/x-icon">
   <meta name="description" content="Web Page Generator Description">
   
   
-  <title>1 Time To Time Status...</title>
+  <title>Time To Time Status - Paid Video Status | P V D</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -84,7 +84,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create a web page</a></section><section once="footers" class="cid-s7IAO7Rz4m" id="footer6-u">
+<section class="engine"><a href="https://mobirise.info/o">portfolio website templates</a></section><section once="footers" class="cid-s7IAO7Rz4m" id="footer6-u">
 
     
 
