--- a/Album-2.html
+++ b/Album-2.html
@@ -8,13 +8,13 @@
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image:src" content="assets/images/Album-2-meta.png">
   <meta property="og:image" content="assets/images/Album-2-meta.png">
-  <meta name="twitter:title" content="2 Romantic Love Status...">
+  <meta name="twitter:title" content="Romantic, Love Status - Paid Video Status | P V D">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/20200818-115620-128x128-1.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/20200818-184249-128x72-1.png" type="image/x-icon">
   <meta name="description" content="Web Page Generator Description">
   
   
-  <title>2 Romantic Love Status...</title>
+  <title>Romantic, Love Status - Paid Video Status | P V D</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -84,7 +84,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section once="footers" class="cid-s7IVjFbpfr" id="footer6-1n">
+<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section once="footers" class="cid-s7IVjFbpfr" id="footer6-1n">
 
     
 
