--- a/Album-4.html
+++ b/Album-4.html
@@ -8,13 +8,13 @@
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image:src" content="assets/images/Album-4-meta.png">
   <meta property="og:image" content="assets/images/Album-4-meta.png">
-  <meta name="twitter:title" content="Attitude / Pubg Status...">
+  <meta name="twitter:title" content="Attitude, Pubg Status - Paid Video Status | P V D">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/20200818-115620-128x128-1.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/20200818-184249-128x72-1.png" type="image/x-icon">
   <meta name="description" content="Web Page Generator Description">
   
   
-  <title>Attitude / Pubg Status...</title>
+  <title>Attitude, Pubg Status - Paid Video Status | P V D</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -84,7 +84,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section once="footers" class="cid-s7IV65IwfY" id="footer6-17">
+<section class="engine"><a href="https://mobirise.info/f">easy website maker</a></section><section once="footers" class="cid-s7IV65IwfY" id="footer6-17">
 
     
 
