--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image:src" content="assets/images/index-meta.jpg">
   <meta property="og:image" content="assets/images/index-meta.jpg">
-  <meta name="twitter:title" content="P V S || HOME || PAID VIDEO STATUS">
+  <meta name="twitter:title" content="Home - Paid Video Status | P V D">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/20200818-115620-128x128-1.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/20200818-184249-128x72-1.png" type="image/x-icon">
   <meta name="description" content="">
   
   
-  <title>P V S || HOME || PAID VIDEO STATUS</title>
+  <title>Home - Paid Video Status | P V D</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -84,7 +84,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header1 cid-s7ydTSgyYK mbr-fullscreen" id="header16-1">
+<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="header1 cid-s7ydTSgyYK mbr-fullscreen" id="header16-1">
 
     
 
@@ -349,7 +349,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VwzscwgbEn8kp3/O/Xn966YYHi+ujeSuxIFVPhKEHOyDXViBU+ZqxlHLO7wjhXStC43uqi4q/lEfLnrqQeVWZb2+PwVg3kEaJ/tEiR9bH/QmeNsxHOqsr2b7WhOyJ4x5">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ce9JQKi/LHaXW/T3b4FogrgfjSQx+mpVL1FASqmEeYQDLOomQko4ITv2Rnffp1la6XHlcP+h+aOv6jAqFFK0wG2BC7bzLdDEaKG3M9n00yLJi0Hyw3vwldPIXwyTNr9B">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
