create github pages

--- a/Album-3.html
+++ b/Album-3.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="assets/images/Album-3-meta.png">
   <meta name="twitter:title" content="Hate, Sad, Broken Status - Paid Video Status | P V D">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/20200818-184249-128x72-1.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/20200818-115620-122x122.png" type="image/x-icon">
   <meta name="description" content="Web Page Generator Description">
   
   
@@ -84,7 +84,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section once="footers" class="cid-s7IViOgD4I" id="footer6-1f">
+<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section once="footers" class="cid-s7IViOgD4I" id="footer6-1f">
 
     
 
