--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="assets/images/index-meta.jpg">
   <meta name="twitter:title" content="Home - Paid Video Status | P V D">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/20200818-184249-128x72-1.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/20200818-115620-122x122.png" type="image/x-icon">
   <meta name="description" content="">
   
   
@@ -84,7 +84,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="header1 cid-s7ydTSgyYK mbr-fullscreen" id="header16-1">
+<section class="engine"><a href="https://mobirise.info/y">free html website templates</a></section><section class="header1 cid-s7ydTSgyYK mbr-fullscreen" id="header16-1">
 
     
 
@@ -349,7 +349,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ce9JQKi/LHaXW/T3b4FogrgfjSQx+mpVL1FASqmEeYQDLOomQko4ITv2Rnffp1la6XHlcP+h+aOv6jAqFFK0wG2BC7bzLdDEaKG3M9n00yLJi0Hyw3vwldPIXwyTNr9B">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="z0SLBZw4xRJMQFWZGkoH/U4Cingzl4y2pptWqT5SHioCefNIKeR2BB2H18ne1Eo+JFUSHCxJilI4awELT2J3Z/UZYpJnUzBEX92c8Rp4TLKT4jvvfHVXhKAC4rz5YgB1">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
