--- a/policy.html
+++ b/policy.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="assets/images/policy-meta.png">
   <meta name="twitter:title" content="Privacy Policy">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/20200818-184249-128x72-1.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/20200818-115620-122x122.png" type="image/x-icon">
   <meta name="description" content="Web Page Creator Description">
   
   
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">website builder</a></section><section class="header1 cid-s7IbyejzRN" id="header16-b">
+<section class="engine"><a href="https://mobirise.info/g">how to build a site</a></section><section class="header1 cid-s7IbyejzRN" id="header16-b">
 
     
 
