--- a/privacy.html
+++ b/privacy.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="assets/images/privacy-meta.png">
   <meta name="twitter:title" content="Cookie Policy">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/20200818-184249-128x72-1.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/20200818-115620-122x122.png" type="image/x-icon">
   <meta name="description" content="Website Builder Description">
   
   
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="header1 cid-s7IiEW22u7" id="header16-g">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="header1 cid-s7IiEW22u7" id="header16-g">
 
     
 
