--- a/Album-2.html
+++ b/Album-2.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="assets/images/Album-2-meta.png">
   <meta name="twitter:title" content="Romantic, Love Status - Paid Video Status | P V D">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/20200818-184249-128x72-1.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/20200818-115620-122x122.png" type="image/x-icon">
   <meta name="description" content="Web Page Generator Description">
   
   
@@ -84,7 +84,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section once="footers" class="cid-s7IVjFbpfr" id="footer6-1n">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section once="footers" class="cid-s7IVjFbpfr" id="footer6-1n">
 
     
 
