--- a/Album-4.html
+++ b/Album-4.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="assets/images/Album-4-meta.png">
   <meta name="twitter:title" content="Attitude, Pubg Status - Paid Video Status | P V D">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/20200818-184249-128x72-1.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/20200818-115620-122x122.png" type="image/x-icon">
   <meta name="description" content="Web Page Generator Description">
   
   
@@ -84,7 +84,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy website maker</a></section><section once="footers" class="cid-s7IV65IwfY" id="footer6-17">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section once="footers" class="cid-s7IV65IwfY" id="footer6-17">
 
     
 
