--- a/terms.html
+++ b/terms.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="assets/images/terms-meta.png">
   <meta name="twitter:title" content="Terms and Conditions">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/20200818-184249-128x72-1.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/20200818-115620-122x122.png" type="image/x-icon">
   <meta name="description" content="Web Maker Description">
   
   
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="header1 cid-s7IekT7LDx" id="header16-e">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="header1 cid-s7IekT7LDx" id="header16-e">
 
     
 
