create github pages

--- a/Album-1.html
+++ b/Album-1.html
@@ -84,7 +84,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section once="footers" class="cid-s7IAO7Rz4m" id="footer6-u">
+<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section once="footers" class="cid-s7IAO7Rz4m" id="footer6-u">
 
     
 
