--- a/policy.html
+++ b/policy.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build a site</a></section><section class="header1 cid-s7IbyejzRN" id="header16-b">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header1 cid-s7IbyejzRN" id="header16-b">
 
     
 
