--- a/terms.html
+++ b/terms.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="header1 cid-s7IekT7LDx" id="header16-e">
+<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="header1 cid-s7IekT7LDx" id="header16-e">
 
     
 
