create github pages

--- a/Album-2.html
+++ b/Album-2.html
@@ -84,7 +84,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free site maker</a></section><section once="footers" class="cid-s7IVjFbpfr" id="footer6-1n">
+<section class="engine"><a href="https://mobirise.info/y">html site templates</a></section><section once="footers" class="cid-s7IVjFbpfr" id="footer6-1n">
 
     
 
